<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_logout"
        android:title="@string/bnm_logout"
        android:icon="@drawable/logout" />
    <item
        android:id="@+id/nav_dashboard"
        android:title="@string/bnm_dash"
        android:icon="@drawable/dashboard" />
    <item
        android:id="@+id/nav_currencies"
        android:title="@string/bnmm_graph"
        android:icon="@drawable/currencies" />
    <item
        android:id="@+id/nav_swap"
        android:title="@string/bnm_swap"
        android:ico="@drawable/swap" />
    <item
        android:id="@+id/nav_pf"
        android:title="@string/bnm_pf"
        android:icon="@drawable/pumpfun" />
    <item
        android:id="@+id/nav_Web3"
        android:title="@string/bnm_web3"
        android:icon="@drawable/web3" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/bnm_settings"
        android:icon="@drawable/settings" />
</menu>
